# ido-org

./: .env.production  .eslintrc-auto-import.json  .gitignore  .lintstagedrc.mjs  .prettierignore  .prettierrc  .project.md  .versionrc.cjs  AGENTS.md  README.md  README.zh-CN.md  commitlint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/: CODE_SIGNING.md  COMMIT_CONVENTION.md
.github/workflows/: auto-tag-release.yml  release.yml
.husky/: pre-commit
backend/: app.py  cli.py  pytest.ini
backend/agents/: action_agent.py  base.py  cleanup_agent.py  diary_agent.py  event_agent.py  knowledge_agent.py  manager.py  raw_agent.py  session_agent.py  simple_agent.py  supervisor.py  todo_agent.py
backend/config/: config.toml  loader.py  prompts_en.toml  prompts_zh.toml
backend/core/: coordinator.py  events.py  logger.py  paths.py  pomodoro_manager.py  protocols.py  settings.py
backend/handlers/: __init__.py  activities.py  agents.py  chat.py  events.py  insights.py  monitoring.py  pomodoro.py  pomodoro_linking.py  pomodoro_phase_endpoints.py  pomodoro_stats.py  processing.py  resources.py  system.py
backend/llm/: __init__.py  client.py  focus_evaluator.py  manager.py  prompt_manager.py
backend/models/: __init__.py  base.py  entities.py  requests.py  responses.py
backend/perception/: __init__.py  active_monitor_tracker.py  active_window_capture.py  base.py  factory.py  image_manager.py  manager.py  screenshot_capture.py  storage.py
backend/processing/: image_filter.py  image_sampler.py  pipeline.py  record_filter.py
backend/services/: __init__.py  chat_service.py  chat_stream_manager.py  friendly_chat_service.py
backend/system/: permissions.py  runtime.py
docs/: CODE_SIGNING_SETUP.md  CONTRIBUTING.md  README.md  RELEASE.md
docs/developers/: README.md
docs/user-guide/: README.md  faq.md  features.md  installation.md  ollama_quickstart.md  ollama_setup.md  troubleshooting.md
scripts/: create-signing-cert.sh  debug_todo_time_range.py  migrate_add_time_range_fields.py  migrate_to_three_layer.py  migrate_v2_to_v1.py  release-pr.sh  release.sh  sync-pyproject-version.cjs  verify-signing.sh  verify-tags.sh
scripts/cross-platform/: check-i18n-keys.ts
scripts/unix/: build-bundle.sh  clean-build.sh  create-signing-cert.sh  fix-app-launch.sh  sign-macos.sh
scripts/windows/: tauri-dev-win.ps1
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  entitlements.plist  tauri.bundle.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src/hooks/: useActivitySync.ts  useBackendLifecycle.ts  useChatStream.ts  useDevShortcuts.ts  useInfiniteScroll.ts  useKnowledgeSync.ts  useMonitorAutoSync.ts  useScrollAnimation.ts  useSystemStatus.ts  useTauriEvents.ts  useTodoSync.ts  useTray.ts  useWindowCloseHandler.ts
src/layouts/: MainLayout.tsx
src/lib/: i18n.ts  utils.ts
src/lib/stores/: ui.ts  (+12 more)
src/live2d/: App.tsx  main.tsx
src/locales/: en.ts  index.ts  zh-CN.ts
src/routes/: Index.tsx
src/styles/: base.css  index.css  live2d.css  theme-variables.css
src/types/: i18next.d.ts
src/views/: AIDiary.tsx  AIKnowledge.tsx  AITodos.tsx  Activity.tsx  App.tsx  Chat.tsx  Dashboard.tsx  Pomodoro.tsx  PomodoroReview.tsx  Settings.tsx
(+153 files in other folders)
